<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/select_city_image"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.mycompany.mainui.actiivity.SplashActivity">

    <ImageView
        android:layout_marginTop="20dp"
        android:src="@drawable/logo"
        android:layout_gravity="center_horizontal"
        android:layout_width="260px"
        android:layout_height="160px" />
    <TextView
        android:textStyle="italic"
        android:typeface="serif"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/black"
        android:layout_gravity="center_horizontal"
        android:text="@string/hello1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:textStyle="italic"
        android:typeface="serif"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/black"
        android:layout_gravity="center_horizontal"
        android:text="@string/hello2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_marginTop="100dp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/black"
        android:typeface="sans"
        android:textSize="22dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/select_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Spinner
        android:layout_marginTop="15dp"
        android:background="@drawable/buttonshape"
        android:id="@+id/city_spinner"
        android:layout_gravity="center_horizontal"
        android:layout_width="150dp"
        android:layout_height="wrap_content">

    </Spinner>
    <Button
        android:background="@drawable/buttonshape"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:typeface="sans"
        android:text="@string/next_btn_name"
        android:id="@+id/btn_next"
        android:layout_marginTop="210dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end" />



</LinearLayout>
